# rust-rt

./: Cargo.toml  README.md
scenes/: simple.yaml  sunset.yaml  triangle.yaml
src/: camera.rs  canvas.rs  color.rs  common.rs  engine.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  render.rs  renderer.rs  scene.rs  sphere.rs  utils.rs  vec3.rs  viewport.rs
src/geometry/: hittable.rs  hittable_list.rs  mod.rs  sphere.rs  triangle.rs
src/imaging/: camera.rs  canvas.rs  color.rs  material.rs  mod.rs  renderer.rs
src/math/: interval.rs  mod.rs  ray.rs  vec3.rs
src/scene/: config.rs  generators.rs  mod.rs
