[package]
name = "rust-rt"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
indicatif = { version = "0.18.3", features = ["rayon"] }
num = "0.4.3"
rand = { version = "0.9.2", features = ["small_rng"] }
rayon = "1.11.0"
